--- a/css/master.css
+++ b/css/master.css
@@ -16,6 +16,10 @@ li {
   list-style: none;
 }
 
+[v-cloak] {
+  display: none;
+}
+
 #lay-main {
   padding: 10px;
   overflow: hidden;
@@ -172,7 +176,6 @@ li {
 }
 
 .lay-zrelist {
-  padding: 10px 20px;
   background: #f6f6f6;
   margin-top: 10px;
   border-radius: 4px
@@ -180,16 +183,17 @@ li {
 
 .lay-zrelist li {
   border-bottom: 1px dashed #ccc;
-  padding: 10px 0
+  padding: 10px 0;
+  margin: 0 10px;
 }
 
 .lay-zrelist li:first-child {
-  padding-top: 0
+  padding-top: 20px;
 }
 
 .lay-zrelist li:last-child {
   border: 0;
-  padding-bottom: 0
+  padding-bottom: 20px
 }
 
 .lay-zrelist li h5 {
